# aiogram_dialog

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .readthedocs.yaml  .ruff.toml  .typos.toml  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt  requirements_doc.txt  setup.py
.github/workflows/: main.yml  publish.yml  setup.yml
aiogram_dialog/: __init__.py  data.py  deprecation_utils.py  dialog.py  exceptions.py  message_manager.py  resumer.py  step.py  texts.py  utils.py  window.py
aiogram_dialog/api/: events.py  modes.py  stack.py
aiogram_dialog/api/entities/: __init__.py  context.py  media.py  modes.py  update_event.py
aiogram_dialog/api/internal/: __init__.py  dialog.py  fake_data.py  manager.py  middleware.py  new_message.py  widgets.py  window.py
aiogram_dialog/api/protocols/: __init__.py  dialog.py  managed.py  manager.py  media.py  message_manager.py  registry.py
aiogram_dialog/context/: context.py  context_compat.py  dialog_context.py  events.py  intent.py  intent_compat.py  intent_filter.py  intent_middleware.py  media_storage.py  stack.py  stateless.py  storage.py
aiogram_dialog/manager/: bg_manager.py  dialog.py  events.py  intent.py  intent_filter.py  manager.py  manager_middleware.py  message_manager.py  protocols.py  registry.py  stack.py  sub_manager.py  update_handler.py
aiogram_dialog/new_manager/: manager.py  manager_proto.py
aiogram_dialog/test_tools/: bot_client.py  mock_message_manager.py
aiogram_dialog/tools/: __init__.py  preview.py  render.py  transitions.py
aiogram_dialog/tools/templates/: message.html
aiogram_dialog/widgets/: action.py  managed.py  utils.py  when.py  widget_event.py
aiogram_dialog/widgets/common/: action.py
aiogram_dialog/widgets/data/: __init__.py  data_context.py
aiogram_dialog/widgets/input/: __init__.py  base.py  combined.py  text.py
aiogram_dialog/widgets/kbd/: __init__.py  base.py  button.py  calendar_kbd.py  checkbox.py  counter.py  datecalendar.py  force_reply.py  group.py  list_group.py  select.py  (+2 more)
docs/: conf.py  faq.rst  group_business.rst  index.rst  migration.rst  overview.rst  tools.rst  transitions.rst  widgets.rst
docs/bg/: index.rst
docs/helper_tools/: import.py  index.rst  render_preview.py  web_preview.sh
docs/how_are_messages_updated/: example.py  index.rst
docs/managers/: index.rst
docs/overview/: concept.rst  index.rst
docs/quickstart/: example.py  index.rst  register.py  start_bot.py  summary.py  window.py
docs/transitions/: buttons.py  closing_dialog.rst  done.py  index.rst  launchmode.py  starting_dialog.rst  startmode.py  state_switch.rst  switch.py  task_stack.rst  types.rst
docs/widgets/: index.rst
example/: custom_media_url.py  example.py  i18n.py  input_dialog.py  input_media_group.py  interactive.py  just_one_more_example.py  launch_modes.py  link_preview.py  list_group.py  loading.py  multistack.py  scrolls.py  simple.py  state_step.py  subdialog.py  wizard.py
example/i18n/: bot.py  i18n_format.py  i18n_middleware.py
example/mega/: bot.py
examples/: custom_media_url.py  input_media_group.py  launch_modes.py  subdialog.py  wizard.py
new/: example.py
new/dialog/: data.py  dialog.py  kbd.py  window.py
new/manager/: manager.py  registry.py  stack.py
src/aiogram_dialog/: __init__.py  about.py  dialog.py  setup.py  utils.py  window.py
tests/: test_bg_managers.py  test_click.py  test_create.py  test_dialog_state_validation.py  test_events.py  test_exception_notes.py  test_fg.py  test_group.py  test_isolation.py  test_nested_transitions.py  test_transitions.py  test_utils.py  test_window.py
tests/widgets/: conftest.py
(+305 files in other folders)
