[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "aiogram_dialog"
version = "2.1.0b3"
readme = "README.md"
authors = [
    { name = "Andrey Tikhonov", email = "17@itishka.org" },
]
license = { file = "LICENSE" }
description = "Telegram bot UI framework on top of aiogram"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'aiogram>=3.2.0',
    'jinja2',
    'cachetools>=4.0.0,<6.0.0',
    'magic_filter',
]
[project.optional-dependencies]
tools = [
    "diagrams",
    "aiohttp",
]
[project.urls]
"Homepage" = "https://github.com/tishka17/aiogram_dialog"
"Documentation" = "https://aiogram-dialog.readthedocs.org"
"Bug Tracker" = "https://github.com/tishka17/aiogram_dialog/issues"

[project.scripts]
aiogram-dialog-preview = "aiogram_dialog.tools.web_preview:main"
